--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BARBER APP</title>
-    <!-- Bootstrap CSS -->
+        <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>BARBER APP HOME</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
-    <div class="landingContainer">
-        <div class="landingRow">
-            <div class="landingCol1">
-                <a href="/users">Looking For A Haircut</a>
-            </div>
-            <div class="landingCol2">
-                <a href="/barbers">I'm A Barber</a>
-            </div>
-        </div>
-    </div>
+<h1>Welcome:</h1>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <a class="landingFont" href="/users">I'm Looking For A Haircut</a> <br>
+        <a href="/users"><img id="userIndexPic" src="https://melbournechapter.net/images/clippers-vector-barber-chair-1.png"></a>
+    </div>
+    <div class="col">
+        <a  class="landingFont" href="/barbers">I'm A Barber</a> <br>
+        <a href="/barbers"><img id="barberIndexPic" src="https://cdn.onlinewebfonts.com/svg/img_548029.png"></a>
+    </div>
+  </div>
+  <div class="row align-items-center">
     <form action="/auth/logout" method="GET" >
         <input type="submit" value="Logout">
     </form>
