--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+```<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -18,9 +18,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link active" href="/users">Users</a>
-        <a class="nav-item nav-link active" href="/barbers">Barbers</a>
+        <a class="nav-item nav-link active" id="home-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" id="user-link" href="/users">Users</a>
+        <a class="nav-item nav-link" id="barber-link" href="/barbers">Barbers</a>
       </div>
     </div>
   </nav>
@@ -30,7 +30,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-</html>
+</html>```
 
 
 
