--- a/views/barbers/edit.ejs
+++ b/views/barbers/edit.ejs
@@ -22,13 +22,14 @@
 
             <h3>Click "Update Barber" To Let The Barber Know Your On The Way:</h3>
             Seat Status:<label class="switch">
-                        <input type="checkbox"  name="seatStatus" >
-                        <span class="slider round"></span>
+                            <input type="checkbox"  name="seatStatus" >
+                            <% if (barber.seatStatus === true){ %>
+                                checked
+                            <% } %>    
+                            <span class="slider round"></span>
                         </label>
             <button id="seatStatusBtn" type="submit">Update Barber</button>
 
-            <% console.log(barber.seatStatus) %>
-        
         </form>
 
         <form action="/barbers/<%=barber._id%>?_method=DELETE" method="POST" >
