--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,13 +18,13 @@
     <% if(typeof message !== "undefined") { %>
         <%= message %>
     <% } %>
-    <form action="/auth/login" method="POST">
+    <form id="login-form"action="/auth/login" method="POST">
         Username: <input type="text" name="username">
         Password: <input type="password" name="password">
         <input type="submit" value="Log In">
     </form>
 
-    <button class="register"><a href="/auth/register">Register Here!</a></button>
+    <button class="register"><a id="register" href="/auth/register">Register Here!</a></button>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
