--- a/views/barbers/show.ejs
+++ b/views/barbers/show.ejs
@@ -28,6 +28,9 @@
                     <%= "I'm Not Available" %>
                 <% } %>   
             </li>
+            <li>
+                Rating: <%= `${barber.rating} out of 5 stars` %>
+            </li>
         </ul>
         
 
