--- a/views/barbers/edit.ejs
+++ b/views/barbers/edit.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BARBERS EDIT PAGE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -25,9 +26,11 @@
                         <input type="checkbox"  name="seatStatus" >
                         <span class="slider round"></span>
                         </label>
+            Rating: <input type="number" name="rating" min="1" max="5">
             <button id="seatStatusBtn" type="submit">Update Barber</button>
+            
 
-            <% console.log(barber.seatStatus) %>
+
         
         </form>
 
