--- a/views/barbers/new.ejs
+++ b/views/barbers/new.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BARBERS NEW PAGE</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -23,7 +24,7 @@
                             <input type="checkbox"  name="seatStatus">
                             <span class="slider round"></span>
                         </label>
-
+            Rating: <input type="number" name="rating" min="1" max="5">
             <button type="submit">Add Barber</button>
         </form>
         <form action="/auth/logout" method="GET" >
