--- a/views/barbers/edit.ejs
+++ b/views/barbers/edit.ejs
@@ -23,10 +23,11 @@
 
             <h3>Click "Update Barber" To Let The Barber Know Your On The Way:</h3>
             Seat Status:<label class="switch">
-                            <input type="checkbox"  name="seatStatus" >
+                            <input type="checkbox"  name="seatStatus"
                             <% if (barber.seatStatus === true){ %>
                                 checked
-                            <% } %>    
+                            <% } %> 
+                            >   
                             <span class="slider round"></span>
                         </label>
             Rating: <input type="number" name="rating" min="1" max="5">
