--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -16,16 +16,16 @@
 
 <div class="container">
   <div id="landingOptions"class="row">
-    <div class="col">
+    <div id="cust" class="col">
         <a class="landingFont" href="/users">I'm Looking For A Haircut</a> <br>
         <a href="/users"><img id="userIndexPic" src="https://melbournechapter.net/images/clippers-vector-barber-chair-1.png"></a>
     </div>
-    <div class="col">
+    <div id="barber"class="col">
         <a  class="landingFont" href="/barbers">I'm A Barber</a> <br>
         <a href="/barbers"><img id="barberIndexPic" src="https://cdn.onlinewebfonts.com/svg/img_548029.png"></a>
     </div>
   </div>
-  <div class="row align-items-left">
+  <div class="logoutBtn" class="row align-items-left">
     <form action="/auth/logout" method="GET" >
         <input id="landingLogout" type="submit" value="Logout">
     </form>
